--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.12",
     "pocketbase": "^0.21.1",
     "react": "^18",
     "react-dom": "^18",
